// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`provision.database (connectivity + stdout forwarding) given: [case1] a prep plan runs against the real testdb when: [t1] the schema step emits its stdout then: the FULL skill stdout matches snapshot (temp path + token masked) 1`] = `
"🐈 chartin course...

⛵ provision.database --which livedb --env prep --mode plan
   ├─ which: livedb
   ├─ env: prep
   ├─ mode: plan
   ├─ lets get some sun...
   │  ├─
   │  │
   │  │  🐈 rise and shine...
   │  │
   │  │  🦺 use.rds.capacity --env prep
   │  │     ├─ env: prep
   │  │     ├─ lets open the channel...
   │  │     │  ├─
   │  │     │  │
   │  │     │  │  🐈 chartin course...
   │  │     │  │
   │  │     │  │  🦺 use.vpc.tunnel --env prep
   │  │     │  │     ├─ env: prep
   │  │     │  │     ├─ target: localhost (local testdb)
   │  │     │  │     └─ no ssm tunnel needed
   │  │     │  │
   │  │     │  │  🐈 smooth sailin!
   │  │     │  │
   │  │     │  │  🦺 use.vpc.tunnel --env prep
   │  │     │  │     └─ points at localhost:7821
   │  │     │  │
   │  │     │  └─
   │  │     ├─ host: localhost
   │  │     ├─ port: 7821
   │  │     └─ await capacity...
   │  │        ├─
   │  │        │
   │  │        │  localhost:7821 - accepting connections
   │  │        │
   │  │        └─
   │  │
   │  │  🐈 caught it!
   │  │
   │  │  🦺 use.rds.capacity
   │  │     └─ database ready
   │  │
   │  └─
   └─ plan schema changes...
      ├─
      │
      │  Everything is up to date
      │  mode-under-test: plan
      │  verified-live-db-read: source=live token=live-db-token-<ts>
      │
      └─

🐈 smooth sailin!

⛵ provision.database --which livedb --env prep --mode plan
   └─ provisioned
"
`;

exports[`provision.database (connectivity + stdout forwarding) given: [case2] the same repo is provisioned with --mode apply when: [t0] provision.database --mode apply is invoked then: the FULL skill stdout matches snapshot (temp path + token masked) 1`] = `
"🐈 chartin course...

⛵ provision.database --which livedb --env prep --mode apply
   ├─ which: livedb
   ├─ env: prep
   ├─ mode: apply
   ├─ lets get some sun...
   │  ├─
   │  │
   │  │  🐈 rise and shine...
   │  │
   │  │  🦺 use.rds.capacity --env prep
   │  │     ├─ env: prep
   │  │     ├─ lets open the channel...
   │  │     │  ├─
   │  │     │  │
   │  │     │  │  🐈 chartin course...
   │  │     │  │
   │  │     │  │  🦺 use.vpc.tunnel --env prep
   │  │     │  │     ├─ env: prep
   │  │     │  │     ├─ target: localhost (local testdb)
   │  │     │  │     └─ no ssm tunnel needed
   │  │     │  │
   │  │     │  │  🐈 smooth sailin!
   │  │     │  │
   │  │     │  │  🦺 use.vpc.tunnel --env prep
   │  │     │  │     └─ points at localhost:7821
   │  │     │  │
   │  │     │  └─
   │  │     ├─ host: localhost
   │  │     ├─ port: 7821
   │  │     └─ await capacity...
   │  │        ├─
   │  │        │
   │  │        │  localhost:7821 - accepting connections
   │  │        │
   │  │        └─
   │  │
   │  │  🐈 caught it!
   │  │
   │  │  🦺 use.rds.capacity
   │  │     └─ database ready
   │  │
   │  └─
   └─ apply schema changes...
      ├─
      │
      │  Everything is up to date
      │  mode-under-test: apply
      │  verified-live-db-read: source=live token=live-db-token-<ts>
      │
      └─

🐈 smooth sailin!

⛵ provision.database --which livedb --env prep --mode apply
   └─ provisioned
"
`;

exports[`provision.database (connectivity + stdout forwarding) given: [case3] the same repo is reconciled with --mode sync --slug when: [t0] provision.database --mode sync is invoked with a slug then: the FULL skill stdout matches snapshot (temp path + token masked) 1`] = `
"🐈 chartin course...

⛵ provision.database --which livedb --env prep --mode sync --slug 2026-08-10.add-index
   ├─ which: livedb
   ├─ env: prep
   ├─ mode: sync
   ├─ change: 2026-08-10.add-index
   ├─ lets get some sun...
   │  ├─
   │  │
   │  │  🐈 rise and shine...
   │  │
   │  │  🦺 use.rds.capacity --env prep
   │  │     ├─ env: prep
   │  │     ├─ lets open the channel...
   │  │     │  ├─
   │  │     │  │
   │  │     │  │  🐈 chartin course...
   │  │     │  │
   │  │     │  │  🦺 use.vpc.tunnel --env prep
   │  │     │  │     ├─ env: prep
   │  │     │  │     ├─ target: localhost (local testdb)
   │  │     │  │     └─ no ssm tunnel needed
   │  │     │  │
   │  │     │  │  🐈 smooth sailin!
   │  │     │  │
   │  │     │  │  🦺 use.vpc.tunnel --env prep
   │  │     │  │     └─ points at localhost:7821
   │  │     │  │
   │  │     │  └─
   │  │     ├─ host: localhost
   │  │     ├─ port: 7821
   │  │     └─ await capacity...
   │  │        ├─
   │  │        │
   │  │        │  localhost:7821 - accepting connections
   │  │        │
   │  │        └─
   │  │
   │  │  🐈 caught it!
   │  │
   │  │  🦺 use.rds.capacity
   │  │     └─ database ready
   │  │
   │  └─
   └─ sync changelog for change: 2026-08-10.add-index ...
      ├─
      │
      │  Everything is up to date
      │  mode-under-test: sync
      │  slug-received: 2026-08-10.add-index
      │  verified-live-db-read: source=live token=live-db-token-<ts>
      │
      └─

🐈 smooth sailin!

⛵ provision.database --which livedb --env prep --mode sync --slug 2026-08-10.add-index
   ├─ change: 2026-08-10.add-index
   └─ changelog reconciled (no sql executed)
"
`;
